--- a/index.html
+++ b/index.html
@@ -341,13 +341,14 @@
     </section>
 
     <!-- 💬 About -->
+    <!-- 💬 About -->
     <section id="about" class="py-20 bg-gray-100">
       <div class="container mx-auto px-6 text-center">
         <h3 class="text-4xl font-bold text-wine mb-8 scroll-animate">
           <i class="fas fa-university mr-3"></i>About NEW MISSION COLLEGE
         </h3>
         <p
-          class="text-gray-600 max-w-3xl mx-auto scroll-animate leading-relaxed"
+          class="text-gray-600 max-w-3xl mx-auto scroll-animate leading-relaxed mb-12"
         >
           New Mission College was established as a remedial institution in 2021
           by the proprietor, <strong>Mr. Robert</strong>, with 65 students,
@@ -356,6 +357,89 @@
           every year due to high academic excellence in WASSCE that the school
           receives from WAEC.
         </p>
+
+        <!-- 🖼️ Picture Cards (4 images) -->
+        <div class="grid sm:grid-cols-2 lg:grid-cols-4 gap-8 mt-10">
+          <!-- Card 1 -->
+          <div
+            class="bg-white rounded-xl shadow-lg overflow-hidden card-hover scroll-animate"
+          >
+            <img
+              src="./images/img1.png"
+              alt="Campus life"
+              class="w-full h-56 object-cover"
+            />
+            <div class="p-5">
+              <h4 class="text-xl font-bold text-wine mb-2">
+                Modern Learning Environment
+              </h4>
+              <p class="text-gray-600 text-sm">
+                Our serene campus fosters focus, creativity, and collaboration
+                among students.
+              </p>
+            </div>
+          </div>
+
+          <!-- Card 2 -->
+          <div
+            class="bg-white rounded-xl shadow-lg overflow-hidden card-hover scroll-animate"
+          >
+            <img
+              src="./images/img2.png"
+              alt="Students studying"
+              class="w-full h-56 object-cover"
+            />
+            <div class="p-5">
+              <h4 class="text-xl font-bold text-wine mb-2">
+                Dedicated Teachers
+              </h4>
+              <p class="text-gray-600 text-sm">
+                Experienced tutors committed to nurturing academic excellence
+                and discipline.
+              </p>
+            </div>
+          </div>
+
+          <!-- Card 3 -->
+          <div
+            class="bg-white rounded-xl shadow-lg overflow-hidden card-hover scroll-animate"
+          >
+            <img
+              src="./images/img6.jpg"
+              alt="College events"
+              class="w-full h-56 object-cover"
+            />
+            <div class="p-5">
+              <h4 class="text-xl font-bold text-wine mb-2">
+                Academic Excellence
+              </h4>
+              <p class="text-gray-600 text-sm">
+                Consistent top performance in WASSCE, inspiring growth and
+                confidence every year.
+              </p>
+            </div>
+          </div>
+
+          <!-- Card 4 -->
+          <div
+            class="bg-white rounded-xl shadow-lg overflow-hidden card-hover scroll-animate"
+          >
+            <img
+              src="./images/img7.jpg"
+              alt="Student activities"
+              class="w-full h-56 object-cover"
+            />
+            <div class="p-5">
+              <h4 class="text-xl font-bold text-wine mb-2">
+                Vibrant Student Life
+              </h4>
+              <p class="text-gray-600 text-sm">
+                Beyond books, we inspire leadership, teamwork, and social
+                responsibility.
+              </p>
+            </div>
+          </div>
+        </div>
       </div>
     </section>
 
@@ -367,13 +451,14 @@
         </h3>
         <p class="text-gray-700 mb-4">
           <i class="fas fa-envelope text-piction mr-2"></i>
-          info@newmissioncollege.edu.gh
+          newmissioncollege.edu.gh
         </p>
         <p class="text-gray-700 mb-4">
           <i class="fas fa-phone text-piction mr-2"></i>0559145733
         </p>
         <p class="text-gray-700 mb-8">
-          <i class="fas fa-map-marker-alt text-piction mr-2"></i>Accra, Ghana
+          <i class="fas fa-map-marker-alt text-piction mr-2"></i>Kumasi Pakyi
+          No.2 Off Obuasi Road
         </p>
         <a
           href="https://docs.google.com/forms/d/e/1FAIpQLScrKhMshDgsmg7DNtAvPtYF3geW4JO4Yo_ztdG0fnkhW3XEBg/viewform"
@@ -382,6 +467,7 @@
           ><i class="fas fa-paper-plane mr-2"></i>Apply Now</a
         >
       </div>
+      g
     </section>
 
     <!-- ⚓ Footer -->
