added search stuff

--- a/index.html
+++ b/index.html
@@ -1,6 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <meta
+      name="description"
+      content="New Mission College in Accra, Ghana — a leading institution offering Science, Business, Visual Arts, and Home Economics programs with top WASSCE performance."
+    />
+    <meta
+      name="keywords"
+      content="New Mission College, Ghana school, WASSCE, Accra education, senior high school, remedial classes, SHS Ghana, best school in Ghana"
+    />
+    <meta name="author" content="New Mission College" />
+
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NEW MISSION COLLEGE | Home</title>
