--- a/index.html
+++ b/index.html
@@ -1,6 +1,93 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
+    <!-- 🌍 Basic SEO Meta Tags -->
+    <title>New Mission College | Excellence in Education and Character</title>
+    <meta
+      name="description"
+      content="New Mission College in Kumasi (Pakyi No.2, Off Obuasi Road) is a leading educational institution dedicated to academic excellence, discipline, and innovation. Apply today to join our mission."
+    />
+    <meta
+      name="keywords"
+      content="New Mission College, Kumasi, Pakyi No.2, Obuasi Road, Ghana, education, SHS, secondary school, private school, best schools in Kumasi, admission, enrollment"
+    />
+    <meta name="author" content="New Mission College Ghana" />
+
+    <!-- 📱 Mobile & Browser Compatibility -->
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="theme-color" content="#722F37" />
+
+    <!-- 🧭 Open Graph (For WhatsApp, Facebook, etc.) -->
+    <meta
+      property="og:title"
+      content="New Mission College | Excellence in Education and Character"
+    />
+    <meta
+      property="og:description"
+      content="Located in Kumasi Pakyi No.2 off Obuasi Road — empowering students through knowledge, discipline, and innovation."
+    />
+    <meta property="og:url" content="https://newmissioncollege.school/" />
+    <meta property="og:type" content="website" />
+    <meta
+      property="og:image"
+      content="https://newmissioncollege.school/images/img1.png"
+    />
+
+    <!-- 🐦 Twitter Card (For X/Twitter) -->
+    <meta name="twitter:card" content="summary_large_image" />
+    <meta
+      name="twitter:title"
+      content="New Mission College | Excellence in Education and Character"
+    />
+    <meta
+      name="twitter:description"
+      content="Located in Kumasi Pakyi No.2 off Obuasi Road — empowering students through knowledge, discipline, and innovation."
+    />
+    <meta
+      name="twitter:image"
+      content="https://newmissioncollege.school/images/img1.png"
+    />
+
+    <!-- 🧱 Favicon -->
+    <link
+      rel="icon"
+      href="https://newmissioncollege.school/images/img1.png"
+      type="image/png"
+    />
+
+    <!-- 🧾 Structured Data (JSON-LD for Google Knowledge Graph) -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "EducationalOrganization",
+        "name": "New Mission College",
+        "alternateName": "NMC Ghana",
+        "url": "https://newmissioncollege.school/",
+        "logo": "https://newmissioncollege.school/images/img1.png",
+        "description": "New Mission College is a mission-driven educational institution in Kumasi (Pakyi No.2, Off Obuasi Road) committed to academic excellence, discipline, and innovation.",
+        "address": {
+          "@type": "PostalAddress",
+          "streetAddress": "Pakyi No.2, Off Obuasi Road",
+          "addressLocality": "Kumasi",
+          "addressRegion": "Ashanti Region",
+          "postalCode": "00233",
+          "addressCountry": "GH"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+233559145733",
+          "contactType": "Admissions Office",
+          "areaServed": "GH",
+          "availableLanguage": ["English"]
+        },
+        "sameAs": [
+          "https://www.facebook.com/",
+          "https://www.instagram.com/",
+          "https://www.twitter.com/"
+        ]
+      }
+    </script>
+
     <meta
       name="description"
       content="New Mission College in Accra, Ghana — a leading institution offering Science, Business, Visual Arts, and Home Economics programs with top WASSCE performance."
